--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -18,7 +18,7 @@ jobs:
     - name: Publish articles on dev.to
       uses: sinedied/publish-devto@v2
       with:
-        files: '_posts/**/*.md'
+        files: 'Articles/*.md'
         devto_key: ${{ secrets.DEVTO_TOKEN }}
         github_token: ${{ secrets.GH_TOKEN }}
         branch: master
