--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -2,7 +2,7 @@ name: publish
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   publish:
@@ -21,5 +21,5 @@ jobs:
         files: 'Articles/*.md'
         devto_key: ${{ secrets.DEVTO_TOKEN }}
         github_token: ${{ secrets.GH_TOKEN }}
-        branch: master
+        branch: main
         conventional_commits: true
