--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -23,3 +23,6 @@ jobs:
         github_token: ${{ secrets.GH_TOKEN }}
         branch: main
         conventional_commits: true
+      env:
+        DEBUG: *
+
